logs/dag_id=rand_user/run_id=manual__2023-11-10T10:39:46.058446+00:00/task_id=destinatin_table/attempt=3.log
[2023-11-10T10:41:50.325+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: rand_user.destinatin_table manual__2023-11-10T10:39:46.058446+00:00 [queued]>
[2023-11-10T10:41:50.336+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: rand_user.destinatin_table manual__2023-11-10T10:39:46.058446+00:00 [queued]>
[2023-11-10T10:41:50.337+0000] {taskinstance.py:1362} INFO - 
--------------------------------------------------------------------------------
[2023-11-10T10:41:50.337+0000] {taskinstance.py:1363} INFO - Starting attempt 3 of 3
[2023-11-10T10:41:50.337+0000] {taskinstance.py:1364} INFO - 
--------------------------------------------------------------------------------
[2023-11-10T10:41:50.352+0000] {taskinstance.py:1383} INFO - Executing <Task(PostgresOperator): destinatin_table> on 2023-11-10 10:39:46.058446+00:00
[2023-11-10T10:41:50.358+0000] {standard_task_runner.py:55} INFO - Started process 4180 to run task
[2023-11-10T10:41:50.363+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'rand_user', 'destinatin_table', 'manual__2023-11-10T10:39:46.058446+00:00', '--job-id', '164', '--raw', '--subdir', 'DAGS_FOLDER/predictions.py', '--cfg-path', '/tmp/tmpsidsr4yw']
[2023-11-10T10:41:50.365+0000] {standard_task_runner.py:83} INFO - Job 164: Subtask destinatin_table
[2023-11-10T10:41:50.427+0000] {task_command.py:376} INFO - Running <TaskInstance: rand_user.destinatin_table manual__2023-11-10T10:39:46.058446+00:00 [running]> on host 91f7624ceef9
[2023-11-10T10:41:50.493+0000] {taskinstance.py:1592} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=Gaurav
AIRFLOW_CTX_DAG_ID=rand_user
AIRFLOW_CTX_TASK_ID=destinatin_table
AIRFLOW_CTX_EXECUTION_DATE=2023-11-10T10:39:46.058446+00:00
AIRFLOW_CTX_TRY_NUMBER=3
AIRFLOW_CTX_DAG_RUN_ID=manual__2023-11-10T10:39:46.058446+00:00
[2023-11-10T10:41:50.503+0000] {base.py:71} INFO - Using connection ID 'Destination_table' for task execution.
[2023-11-10T10:41:50.507+0000] {sql.py:315} INFO - Running statement: 
        CREATE TABLE IF NOT EXISTS rand_users (
        gender TEXT NOT NULL,
        title TEXT NOT NULL,
        firstname TEXT NOT NULL,
        lastname TEXT NOT NULL,
        country TEXT NOT NULL,
        username TEXT NOT NULL,
        password TEXT NOT NULL,
        email TEXT NOT NULL,
        age TEXT NOT NULL
        , parameters: None
[2023-11-10T10:41:50.508+0000] {taskinstance.py:1851} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 94, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 295, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 320, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at end of input
LINE 12:         
                 ^

[2023-11-10T10:41:50.516+0000] {taskinstance.py:1406} INFO - Marking task as FAILED. dag_id=rand_user, task_id=destinatin_table, execution_date=20231110T103946, start_date=20231110T104150, end_date=20231110T104150
[2023-11-10T10:41:50.528+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 164 for task destinatin_table (syntax error at end of input
LINE 12:         
                 ^
; 4180)
[2023-11-10T10:41:50.574+0000] {local_task_job.py:164} INFO - Task exited with return code 1
[2023-11-10T10:41:50.592+0000] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
